remove shebang from source code

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "bun build ./src/cli.ts --outfile=dist/cli.js --target=node",
+    "build": "bun build ./src/cli.ts --outfile=dist/cli.js --target=node --banner '#!/usr/bin/env node'",
     "prepublishOnly": "bun run build"
   },
   "keywords": [],
