--- a/package.json
+++ b/package.json
@@ -17,15 +17,17 @@
   "license": "MIT",
   "devDependencies": {
     "@mozilla/readability": "^0.5.0",
+    "@types/bun": "^1.1.15",
+    "@types/micromatch": "^4.0.9",
+    "@types/turndown": "^5.0.5",
     "cac": "^6.7.14",
     "cheerio": "^1.0.0",
     "gpt-tokenizer": "^2.8.1",
     "happy-dom": "^16.5.3",
+    "micromatch": "^4.0.8",
     "p-queue": "^8.0.1",
     "picocolors": "^1.1.1",
     "turndown": "^7.2.0",
-    "turndown-plugin-gfm": "^1.0.2",
-    "@types/bun": "^1.1.15",
-    "@types/turndown": "^5.0.5"
+    "turndown-plugin-gfm": "^1.0.2"
   }
 }
