feat: expose api

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "module": "ESNext",
       "moduleDetection": "force",
       "jsx": "react-jsx",
-      "allowJs": true,
+      "isolatedDeclarations": true,
+      "declaration": true,
   
       // Bundler mode
       "moduleResolution": "bundler",
