--- a/package.json
+++ b/package.json
@@ -3,31 +3,38 @@
   "version": "0.0.10",
   "description": "Fetch an entire site and save it as a text file",
   "bin": "./dist/cli.js",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "bun build ./src/cli.ts --outfile=dist/cli.js --target=node --banner '#!/usr/bin/env node'",
+    "build": "rm -rf dist && rolldown -c",
     "prepublishOnly": "bun run build"
   },
   "keywords": [],
   "author": "EGOIST <hi@egoist.dev>",
   "license": "MIT",
+  "dependencies": {
+    "happy-dom": "^16.5.3",
+    "cheerio": "^1.0.0",
+    "gpt-tokenizer": "^2.8.1",
+    "turndown": "^7.2.0",
+    "turndown-plugin-gfm": "^1.0.2",
+    "micromatch": "^4.0.8"
+  },
   "devDependencies": {
     "@mozilla/readability": "^0.5.0",
     "@types/bun": "^1.1.15",
     "@types/micromatch": "^4.0.9",
     "@types/turndown": "^5.0.5",
     "cac": "^6.7.14",
-    "cheerio": "^1.0.0",
-    "gpt-tokenizer": "^2.8.1",
-    "happy-dom": "^16.5.3",
-    "micromatch": "^4.0.8",
     "p-queue": "^8.0.1",
     "picocolors": "^1.1.1",
-    "turndown": "^7.2.0",
-    "turndown-plugin-gfm": "^1.0.2"
+    "rolldown": "^1.0.0-beta.1",
+    "typescript": "^5.7.3",
+    "unplugin-isolated-decl": "^0.10.4"
   }
 }
