--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
   "author": "EGOIST <hi@egoist.dev>",
   "license": "MIT",
   "dependencies": {
-    "happy-dom": "^16.5.3",
     "cheerio": "^1.0.0",
     "gpt-tokenizer": "^2.8.1",
+    "happy-dom": "^16.5.3",
+    "micromatch": "^4.0.8",
     "turndown": "^7.2.0",
-    "turndown-plugin-gfm": "^1.0.2",
-    "micromatch": "^4.0.8"
+    "turndown-plugin-gfm": "^1.0.2"
   },
   "devDependencies": {
     "@mozilla/readability": "^0.5.0",
     "@types/bun": "^1.1.15",
     "@types/micromatch": "^4.0.9",
+    "@types/node": "^22.13.5",
     "@types/turndown": "^5.0.5",
     "cac": "^6.7.14",
     "p-queue": "^8.0.1",
